@@ -1,3 +1,4 @@
+* BUG#7295 Les champs d'une commission ne doivent pas être modifiable par un utilisateur
 * FEA#7108 Ne pas renseigner la date de paiement dans le cas où le journal de paiement des courtiers n'est pas défini
 * BUG#6788 La création des relances n'est plus permise sur des tiers de type courtier
 * FEA#6642 Ajout des conditions de paiement par le protocole de commissionnement
